<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_weight="1"
    android:layout_gravity="fill"
    android:layout_columnSpan="2">

    <TextView
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/text_GUI"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_row="1"
        android:layout_column="0"

        android:onClick="click_Me_Toast"
        android:text="@string/Click_Here" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/CheckBox"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_row="2"
        android:layout_column="0"
        app:srcCompat="@string/flag_png" />

    <Switch
        android:id="@+id/switch1"
        android:text="@string/Switch_on_off"
        android:layout_height="48dp"
        android:layout_width="48dp"
        />

    <EditText
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_row="4"
        android:layout_column="0"
        android:hint="@string/type_here"
        android:inputType="textPersonName" />


</GridLayout>