<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_GUI"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:onClick="click_Me_Toast"
        android:text="@string/Click_Here" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="193dp"
        android:layout_height="43dp"
        android:layout_toEndOf="@id/button1"
        android:layout_below="@id/textView2"
        android:text="@string/CheckBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="183dp"
        android:layout_height="130dp"
        android:layout_below="@id/button1"
        android:layout_marginStart="4dp"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="183dp"
        android:layout_height="11dp"
        android:layout_below="@id/checkBox"
        android:layout_toEndOf="@id/imageButton"
        android:text="@string/Switch_on_off" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_below="@id/imageButton"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:text="@string/type_here"
        android:textFontWeight="21" />

</RelativeLayout>